--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -32,7 +32,7 @@
     {% endwith %}
   </p>
   {{ form.submit(class_="btn btn-black") }}
-  <a class="btn btn-secondary" href="{{ url_for('users.register') }}" role="button">Register</a>
+  <a class="btn btn-secondary" href="{{ url_for('account.register') }}" role="button">Register</a>
 </form>
 
 {% endblock %}
