--- a/app/templates/account/account.html
+++ b/app/templates/account/account.html
@@ -1,40 +1,27 @@
 {% extends "base.html" %}
 
 {% block content %}
-<br><br>
-<h2>Your Account</h2>
-<div class="container" style="max-width: 600px;">
+<div class="container" style="max-width: 640px; margin-top: 40px;">
+  <h2>Your Account</h2>
   <p><strong>Account #:</strong> {{ user.id }}</p>
   <p><strong>Name:</strong> {{ user.full_name }}</p>
   <p><strong>Email:</strong> {{ user.email }}</p>
   <p><strong>Address:</strong> {{ user.address }}</p>
-  <p><strong>Balance:</strong> {{ format_money(balance_cents) }}</p>
+  <p><strong>Current Balance:</strong> {{ format_money(balance_cents) }}</p>
 
-  <p>
-    <a class="btn btn-link" href="{{ url_for('account.account_edit') }}">Edit profile</a>
-    <a class="btn btn-link" href="{{ url_for('account.account_purchases') }}">Purchase history</a>
-    <a class="btn btn-link" href="{{ url_for('account.public_profile', user_id=user.id) }}">Public profile</a>
-    <a class="btn btn-link" href="{{ url_for('account.account_purchase_lookup') }}">Lookup purchases by user ID</a>
-  </p>
-
-  <hr>
-  <h3>Deposit Funds</h3>
-  <form method="post" action="{{ url_for('account.account_deposit') }}">
-    <div class="form-group">
-      <label for="deposit-amount">Amount (USD)</label>
-      <input id="deposit-amount" name="amount" type="number" class="form-control" step="0.01" min="0.01" required>
-    </div>
-    <button class="btn btn-success" type="submit">Deposit</button>
-  </form>
-
-  <hr>
-  <h3>Withdraw Funds</h3>
-  <form method="post" action="{{ url_for('account.account_withdraw') }}">
-    <div class="form-group">
-      <label for="withdraw-amount">Amount (USD)</label>
-      <input id="withdraw-amount" name="amount" type="number" class="form-control" step="0.01" min="0.01" required>
-    </div>
-    <button class="btn btn-warning" type="submit">Withdraw</button>
-  </form>
+  <div class="list-group mt-4">
+    <a class="list-group-item list-group-item-action" href="{{ url_for('account.account_edit') }}">
+      Update profile details
+    </a>
+    <a class="list-group-item list-group-item-action" href="{{ url_for('account.account_balance') }}">
+      Manage balance &amp; view transactions
+    </a>
+    <a class="list-group-item list-group-item-action" href="{{ url_for('account.account_purchases') }}">
+      View purchase history
+    </a>
+    <a class="list-group-item list-group-item-action" href="{{ url_for('account.public_profile', user_id=user.id) }}">
+      View public profile
+    </a>
+  </div>
 </div>
 {% endblock %}
