--- a/app/templates/account/public_user.html
+++ b/app/templates/account/public_user.html
@@ -1,18 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-<br><br>
-<h2>Public Profile</h2>
-<div class="container" style="max-width: 600px;">
+<div class="container" style="max-width: 640px; margin-top: 40px;">
+  <h2>Public Profile</h2>
   <p><strong>Account #:</strong> {{ user.id }}</p>
   <p><strong>Name:</strong> {{ user.full_name }}</p>
-  {% if is_seller %}
-  <p><strong>Email:</strong> {{ user.email }}</p>
+  <p><strong>Contact email:</strong> {{ user.email }}</p>
   <p><strong>Address:</strong> {{ user.address }}</p>
-  {% endif %}
 
   <hr>
   <h3>Seller Reviews</h3>
-  <p>No reviews yet.</p>
+  <p>Seller reviews go here (to be implemented).</p>
 </div>
 {% endblock %}
