--- a/app/templates/account/purchases.html
+++ b/app/templates/account/purchases.html
@@ -1,34 +1,35 @@
 {% extends "base.html" %}
 
 {% block content %}
-<br><br>
-<h2>Purchase History</h2>
-{% if orders %}
-<table class="table table-hover table-bordered container">
-  <thead class="thead-dark">
-    <tr>
-      <th scope="col">Order #</th>
-      <th scope="col">Date</th>
-      <th scope="col">Total</th>
-      <th scope="col">Items</th>
-      <th scope="col">Fulfilled?</th>
-      <th scope="col">Details</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for order in orders %}
-    <tr>
-      <th scope="row">{{ order.id }}</th>
-      <td>{{ order.created_at }}</td>
-      <td>{{ format_money(order.total_cents) }}</td>
-      <td>{{ order.item_count }}</td>
-      <td>{{ 'Yes' if order.fulfilled else 'No' }}</td>
-      <td><a href="{{ '/orders/' ~ order.id }}">View</a></td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
-{% else %}
-<p>No purchases yet.</p>
-{% endif %}
+<div class="container" style="max-width: 720px; margin-top: 40px;">
+  <h2>My Purchases</h2>
+  {% if purchases %}
+  <table class="table table-striped table-bordered mt-4">
+    <thead class="thead-light">
+      <tr>
+        <th scope="col">Order #</th>
+        <th scope="col">Date</th>
+        <th scope="col">Items</th>
+        <th scope="col">Total</th>
+        <th scope="col">Status</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for purchase in purchases %}
+      <tr>
+        <th scope="row">
+          <a href="{{ '/orders/' ~ purchase.order_id }}">#{{ purchase.order_id }}</a>
+        </th>
+        <td>{{ purchase.order_created_at.strftime('%b %d, %Y %I:%M %p') if purchase.order_created_at else '' }}</td>
+        <td>{{ purchase.item_count }}</td>
+        <td>${{ '%.2f' % (purchase.total_cents / 100.0) }}</td>
+        <td>{{ 'Fulfilled' if purchase.fulfilled else 'In progress' }}</td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+  {% else %}
+  <p class="mt-3">You have not bought anything yet.</p>
+  {% endif %}
+</div>
 {% endblock %}
