Added Top Expensive Product Feature

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -41,6 +41,11 @@
   </tbody>
 </table>
 
+<a href="{{ url_for('products.top_products') }}" class="btn btn-primary">
+  View Top Products
+</a>
+
+
 <br><br>
 {% if g.user %}
 <h2>Your recent purchases:</h2>
