--- a/app/templates/inventory.html
+++ b/app/templates/inventory.html
@@ -26,7 +26,7 @@
     </tbody>
   </table>
   {% else %}
-  <p class="mt-3">You do not have any products in your inventory.</p>
+  <p class="mt-3">You do not have any products for sale.</p>
   {% endif %}
 </div>
 {% endblock %}
