--- a/app/templates/account/account.html
+++ b/app/templates/account/account.html
@@ -19,6 +19,9 @@
     <a class="list-group-item list-group-item-action" href="{{ url_for('account.account_purchases') }}">
       View purchase history
     </a>
+    <a class="list-group-item list-group-item-action" href="{{ url_for('users.users_search') }}">
+      Find other users
+    </a>
     <a class="list-group-item list-group-item-action" href="{{ url_for('account.public_profile', user_id=user.id) }}">
       View public profile
     </a>
