--- a/app/users/templates/users/account.html
+++ b/app/users/templates/users/account.html
@@ -60,6 +60,10 @@
               View Purchase History
               <i class="fa fa-chevron-right small"></i>
             </a>
+            <a class="list-group-item list-group-item-action d-flex justify-content-between align-items-center" href="{{ url_for('users.users_search') }}">
+              Find Other Users
+              <i class="fa fa-chevron-right small"></i>
+            </a>
             <a class="list-group-item list-group-item-action d-flex justify-content-between align-items-center" href="{{ url_for('users.users_balance_history') }}">
               View Balance History
               <i class="fa fa-chevron-right small"></i>
