--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,6 +18,7 @@
 <br><br>
 
 <h2>Products for sale:</h2>
+<p class="text-muted">Showing the first 50 available products.</p>
 <table class='table table-hover table-bordered container'>
   <thead class="thead-dark">
     <tr>
